--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index-head.css">
     <title>Cool kitties</title>
 </head>
 <body>
-    <h1>Here will be real kitties</h1>
+    <head>
+        <h1>Here will be real kitties</h1>
+        <img src="img/nicecat.jpg" alt="Nice cat">
+    </head>
 </body>
-<img src="img/nicecat.jpg" alt="Nice cat">
+
 </html>
